--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Тигарев Евгений</title>
+    <meta name="description" content="Частный вебмастер в Мурманске. Занимаюсь разработкой и обслуживанием сайтов, поисковой оптимизацией и интернет-маркетингом">
+    <title>Частный вебмастер Тигарев Евгений</title>
   </head>
   <body>
-    <h1>coming soon...</h1>
+    <h1>Технические работы</h1>
+    <p>Связаться со мной можно по номеру <a href="tel:+79211692439">+79211692439</a> или вконтакте <a href="vk.com/tigareves" target="_blank">vk.com/tigareves</a></p>
   </body>
 </html>
