--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <h1>Технические работы</h1>
-    <p>Связаться со мной можно по номеру <a href="tel:+79211692439">+79211692439</a> или вконтакте <a href="vk.com/tigareves" target="_blank">vk.com/tigareves</a></p>
+    <p>Связаться со мной можно по номеру <a href="tel:+79211692439">+79211692439</a> или вконтакте <a href="https://vk.com/tigareves" target="_blank">vk.com/tigareves</a></p>
   </body>
 </html>
