--- a/index.html
+++ b/index.html
@@ -207,15 +207,15 @@
       <div class="co-description">
         <div class="co-headline">Предлагаем аренду по адекватной цене!</div>
         <div class="co-value">
-          <span class="-big-number">800</span> <span class="price-text">₽/м<sup>2</sup></span>
+          <span class="-big-number">800</span> <span class="price-text">&#8381;/м<sup>2</sup></span>
           <span class="-small-text">Офисы с видом на ул. Буркова</span>
         </div>
         <div class="co-value">
-          <span class="-big-number">900</span> <span class="price-text">₽/м<sup>2</sup></span>
+          <span class="-big-number">900</span> <span class="price-text">&#8381;/м<sup>2</sup></span>
           <span class="-small-text">Офисы с видом на город</span>
         </div>
         <div class="co-value">
-          <span class="-big-number">1.000</span> <span class="price-text">₽/м<sup>2</sup></span>
+          <span class="-big-number">1.000</span> <span class="price-text">&#8381;/м<sup>2</sup></span>
           <span class="-small-text">Офисы - энкеры</span>
         </div>
         <div class="co-hot"><span>Каждой компании</span>, при<br><span>личном знакомстве</span>,<br>мы <span>готовы сделать</span><br><span>предожение.</span>
@@ -248,7 +248,7 @@
             <tr>
               <th><span class="-table-cell-caption">Номер </span>(№)</th>
               <th><span class="-table-cell-caption">Площадь </span>(м<sup>2</sup>)</th>
-              <th><span class="-table-cell-caption">Стоимость </span>(₽/м<sup>2</sup>)</th>
+              <th><span class="-table-cell-caption">Стоимость </span>(&#8381;/м<sup>2</sup>)</th>
             </tr>
             <tr>
               <td>400</td>
@@ -289,7 +289,7 @@
             <tr>
               <th><span class="-table-cell-caption">Номер </span>(№)</th>
               <th><span class="-table-cell-caption">Площадь </span>(м<sup>2</sup>)</th>
-              <th><span class="-table-cell-caption">Стоимость </span>(₽/м<sup>2</sup>)</th>
+              <th><span class="-table-cell-caption">Стоимость </span>(&#8381;/м<sup>2</sup>)</th>
             </tr>
             <tr>
               <td>800</td>
@@ -355,7 +355,7 @@
             <tr>
               <th><span class="-table-cell-caption">Номер </span>(№)</th>
               <th><span class="-table-cell-caption">Площадь </span>(м<sup>2</sup>)</th>
-              <th><span class="-table-cell-caption">Стоимость </span>(₽/м<sup>2</sup>)</th>
+              <th><span class="-table-cell-caption">Стоимость </span>(&#8381;/м<sup>2</sup>)</th>
             </tr>
             <tr>
               <td>909/910</td>
