--- a/s51/index.html
+++ b/s51/index.html
@@ -30,12 +30,12 @@
     #add-dicuss {background-color: #f0f0f0; height: 47px; display: flex; align-items: center;}
     .ad-close {min-width: 47px;color: #949494; display: flex; cursor: pointer;}
     .ad-close>svg {margin: auto; height: 1em;}
-    .ad-text {font-size: .8rem; line-height: 1; padding-right: 10px;}
+    .ad-text {font-size: .8rem; line-height: 1.2; padding-right: 10px;}
     .ad-button {padding-right: 14px;}
     .ad-link {display: block; border-radius: 4px; border: 1px solid #949494; text-decoration: none; font-size: .8rem; padding: 0 14px; color: inherit; background-color: #fff;}
 
-    #discuss-body { margin-top: 10px; }
-    .db-header {font-size: .9rem; display: flex; color: #949494;}
+    #discuss-body {}
+    .db-header {font-size: .9rem; display: flex; color: #949494; margin: 20px 0;}
     .db-author > span{ color: #535353; }
     .db-date {margin-left: auto;}
 
@@ -43,12 +43,12 @@
     .db-title {margin-top: 10px;}
     .db-title > h1 {font-size: 1.5rem; font-family: 'Yanone Kaffeesatz', sans-serif; font-weight: normal; line-height: .95;}
     .db-description {margin-top: 10px; border-left: 3px solid #202D40; padding-left: .5rem;}
-    .db-description p {line-height: 1.2; font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; font-style: italic; color: #535353; font-size: .9rem;}
+    .db-description p {line-height: 1.4; font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; font-style: italic; color: #535353; font-size: .9rem;}
 
-    .db-footer {margin-top: 20px; font-size: .9rem; color: #949494; }
+    .db-footer {margin: 20px 0; font-size: .9rem; color: #949494; }
     .db-tags > svg {height: 1em; margin-right: 5px;}
 
-    #discuss-footer {margin-top: 20px; display: flex; flex-wrap: wrap;}
+    #discuss-footer {display: flex; flex-wrap: wrap;}
     .df-tab {display: block; height: 47px; min-width: 50%; line-height: 47px; text-align: center; background-color: #f0f0f0; border: 1px solid transparent; 
       border-bottom: 1px solid #949494;}
 
