--- a/index.html
+++ b/index.html
@@ -1,214 +1,13 @@
-<!doctype html>
-<html lang="ru">
-<head>
-  <meta charset="utf-8">
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-  <title></title>
-  <link rel="canonical" href="">
-  <link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz&amp;subset=cyrillic" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Vollkorn:400,600&amp;subset=cyrillic" rel="stylesheet">
-  <style>
-    *,*:before,*:after{box-sizing:border-box;}
-    body,ul,figure,h1,h2,h3,h4,p,ul,li,blockquote{margin:0;padding:0;}
-    body {font-family: 'Vollkorn', serif;}
-    .container {max-width: 1280px; margin-left: auto;margin-right: auto;}
-    .inner {max-width: 66rem; margin-left: auto;margin-right: auto;padding: 0 14px;}
-    .flex {display: flex;}
-    /*menu*/
-    #menu {background-color: #202D40; font-family: 'Yanone Kaffeesatz', sans-serif; font-size: 1.2rem; color: #fff;}
-    #menu>ul{list-style-type: none;}
-    .menu-item{margin: 0 14px;}
-    .menu-link {line-height: 47px;color:inherit;text-decoration: none;}
-    .menu-link>.icon {height: 1em; display: inline-block; vertical-align: -.125em;}
-    .menu-item:hover,.menu-item:focus {box-shadow: inset 0 -5px 0 0 #fff;}
-    .menu-item span {display: none;}
-    @media (min-width: 539px) {
-      .menu-item span {display: inline; margin-left: 2px;}}
-    #btn-add {margin-left: auto; cursor: pointer;}
-    #btn-search {cursor: pointer;}
-    #add-dicuss {background-color: #f0f0f0; height: 47px; display: flex; align-items: center;}
-    .ad-close {min-width: 47px;color: #949494; display: flex; cursor: pointer;}
-    .ad-close>svg {margin: auto; height: 1em;}
-    .ad-text {font-size: .8rem; line-height: 1.2; padding-right: 10px;}
-    .ad-button {padding-right: 14px;}
-    .ad-link {display: block; border-radius: 4px; border: 1px solid #949494; text-decoration: none; font-size: .8rem; padding: 0 14px; color: inherit; background-color: #fff;}
-
-    #discuss-body {}
-    .db-header {color: #949494; margin: 20px 0; position: relative;}
-    .db-author {margin-left: 55px; line-height: 1;}
-    .db-author > span{ color: #535353;}
-    .db-date {margin-left: 55px; font-size: .9rem;}
-    .db-avatar {position: absolute; top: -7px;}
-    .db-avatar>img{border-radius: 50%;}
-
-    .db-content {padding: 0 20px;}
-    .db-title {margin-top: 10px;}
-    .db-title > h1 {font-size: 1.5rem; font-family: 'Yanone Kaffeesatz', sans-serif; font-weight: normal; line-height: .95;}
-    .db-description {margin-top: 10px; border-left: 3px solid #202D40; padding-left: .5rem;}
-    .db-description p {line-height: 1.4; font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; color: #535353; font-size: .9rem;}
-
-    .db-footer {margin: 20px 0; font-size: .9rem; color: #949494; }
-    .db-tags > svg {height: 1em; margin-right: 5px;}
-
-    #discuss-footer {display: flex; flex-wrap: wrap;}
-    .df-tab {display: block; height: 47px; min-width: 50%; line-height: 47px; text-align: center; background-color: #f0f0f0; border: 1px solid transparent; 
-      border-bottom: 1px solid #949494;}
-
-    label[for=answers] {border-top-left-radius: 25px;}
-    label[for=add] { border-top-right-radius: 25px;}
-    input[type=radio] {display: none;}
-    input[type="radio"]:checked + label {background: #fff; border-bottom: 1px solid #fff; border-top: 1px solid #949494;border-right: 1px solid #949494; border-left: 1px solid #949494;}
-    input[type="radio"]:checked + label + section { order: 3; display: block!important;}
-    #discuss-footer section {display: none; border-left: 1px solid #949494; border-right: 1px solid #949494; width: 100%; background-color: #f0f0f0;}
-    
-    .a-answer {background-color: #f0f0f0; margin-bottom: 10px;}
-    .a-header {position: relative; padding: 10px 14px; background-color: #fff;}
-    .a-author {margin-left: 50px; line-height: 1; color: #535353;}
-    .a-date {margin-left: 50px; color: #949494; font-size: .9rem;}
-    .a-avatar {position: absolute;  top: 7px;}
-    .a-avatar>img {border-radius: 50%;}
-
-    .a-body {position: relative; padding: 0 14px 0 34px; background-color: #fff;}
-    .a-body p {line-height: 1.4; font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; font-size: .9rem;}
-    .a-body:before {content: '\201C'; position: absolute; left: 5px; font-size: 64px; top: -15px; color: #ccc;}
-
-    .a-footer {background-color: #fff; display: flex; justify-content: flex-end; padding: 0 14px; border-bottom: 1px solid rgba(0,0,0,.1);}
-    .a-rating {display: flex;}
-    .a-rating span {color: green; line-height: 1;}
-    .a-rating>.angle {padding: 2px 10px; cursor: pointer;}
-    .angle>svg {height: 1em; width: 1em;}
-  </style>
-</head>
-<body>
-<!-- menu -->
-<nav id="menu">
-  <ul class="container flex">
-    <li class="menu-item"><a class="menu-link" href="https://скважина51.рф/">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" class="icon">
-        <path fill="currentColor" d="M557.1 240.7L512 203.8V104c0-4.4-3.6-8-8-8h-32c-4.4 0-8 3.6-8 8v60.5L313.4 41.1c-14.7-12.1-36-12.1-50.7 0L18.9 240.7c-3.4 2.8-3.9 7.8-1.1 11.3l20.3 24.8c2.8 3.4 7.8 3.9 11.3 1.1l14.7-12V464c0 8.8 7.2 16 16 16h168c4.4 0 8-3.6 8-8V344h64v128c0 4.4 3.6 8 8 8h168c8.8 0 16-7.2 16-16V265.8l14.7 12c3.4 2.8 8.5 2.3 11.3-1.1l20.3-24.8c2.6-3.4 2.1-8.4-1.3-11.2zM464 432h-96V304c0-4.4-3.6-8-8-8H216c-4.4 0-8 3.6-8 8v128h-96V226.5l170.9-140c2.9-2.4 7.2-2.4 10.1 0l170.9 140V432z" class=""></path>
-      </svg>
-      <span>Главная</span>
-    </a></li>
-    <li class="menu-item"><a class="menu-link" href="https://скважина51.рф/category/статьи/">Статьи</a></li>
-    <li class="menu-item"><a class="menu-link" href="https://скважина51.рф/category/обсуждения/">Обсуждения</a></li>
-    <li class="menu-item" id="btn-add"><a class="menu-link" href="https://скважина51.рф/add/">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="icon">
-        <path fill="currentColor" d="M352 240v32c0 6.6-5.4 12-12 12h-88v88c0 6.6-5.4 12-12 12h-32c-6.6 0-12-5.4-12-12v-88h-88c-6.6 0-12-5.4-12-12v-32c0-6.6 5.4-12 12-12h88v-88c0-6.6 5.4-12 12-12h32c6.6 0 12 5.4 12 12v88h88c6.6 0 12 5.4 12 12zm96-160v352c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V80c0-26.5 21.5-48 48-48h352c26.5 0 48 21.5 48 48zm-48 346V86c0-3.3-2.7-6-6-6H54c-3.3 0-6 2.7-6 6v340c0 3.3 2.7 6 6 6h340c3.3 0 6-2.7 6-6z" class=""></path>
-      </svg>
-      <span>Добавить</span>
-    </a></li>
-    <li class="menu-item" id="btn-search"><div class="menu-link">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="icon">
-        <path fill="currentColor" d="M508.5 468.9L387.1 347.5c-2.3-2.3-5.3-3.5-8.5-3.5h-13.2c31.5-36.5 50.6-84 50.6-136C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c52 0 99.5-19.1 136-50.6v13.2c0 3.2 1.3 6.2 3.5 8.5l121.4 121.4c4.7 4.7 12.3 4.7 17 0l22.6-22.6c4.7-4.7 4.7-12.3 0-17zM208 368c-88.4 0-160-71.6-160-160S119.6 48 208 48s160 71.6 160 160-71.6 160-160 160z" class=""></path>
-      </svg>
-      <span>Найти</span>
-    </div></li>
-  </ul>
-</nav>
-<!-- add-discuss -->
-<div id="add-dicuss" class="container">
-  <div class="ad-close"><svg aria-hidden="true" data-prefix="far" data-icon="times" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512" class="svg-inline--fa fa-times fa-w-12"><path fill="currentColor" d="M231.6 256l130.1-130.1c4.7-4.7 4.7-12.3 0-17l-22.6-22.6c-4.7-4.7-12.3-4.7-17 0L192 216.4 61.9 86.3c-4.7-4.7-12.3-4.7-17 0l-22.6 22.6c-4.7 4.7-4.7 12.3 0 17L152.4 256 22.3 386.1c-4.7 4.7-4.7 12.3 0 17l22.6 22.6c4.7 4.7 12.3 4.7 17 0L192 295.6l130.1 130.1c4.7 4.7 12.3 4.7 17 0l22.6-22.6c4.7-4.7 4.7-12.3 0-17L231.6 256z" class=""></path></svg></div>
-  <div class="ad-text"><span>Не нашли интересующей Вас темы? Просто создайте свою.</span></div>
-  <div class="ad-button">
-    <a class="ad-link" href="">Создать</a>
-  </div>
-</div>
-<main id="discuss-body" class="inner">
-  <div class="db-header">
-    <div class="db-avatar">
-      <img src="ava.jpg" alt="" width="48" height="48">
-    </div>
-    <div class="db-author">
-      <span>Тигарев Евгений</span> спрашивает
-    </div>
-    <div class="db-date">
-      <time>30 дней назад</time>
-    </div>
-  </div>
-  <div class="db-content">
-    <div class="db-title">
-      <h1>Какой насос использовать для подъема воды из скважины?</h1>
-    </div>
-    <div class="db-description">
-      <p>Тут можно добавить какое-то описание к теме вопроса, чтобы соориентировать людей, отвечающих на него.</p>
-    </div>
-  </div>
-  <div class="db-footer">
-    <div class="db-tags">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512" ><path fill="currentColor" d="M497.941 225.941L286.059 14.059A48 48 0 0 0 252.118 0H48C21.49 0 0 21.49 0 48v204.118a48 48 0 0 0 14.059 33.941l211.882 211.882c18.744 18.745 49.136 18.746 67.882 0l204.118-204.118c18.745-18.745 18.745-49.137 0-67.882zM112 160c-26.51 0-48-21.49-48-48s21.49-48 48-48 48 21.49 48 48-21.49 48-48 48zm513.941 133.823L421.823 497.941c-18.745 18.745-49.137 18.745-67.882 0l-.36-.36L527.64 323.522c16.999-16.999 26.36-39.6 26.36-63.64s-9.362-46.641-26.36-63.64L331.397 0h48.721a48 48 0 0 1 33.941 14.059l211.882 211.882c18.745 18.745 18.745 49.137 0 67.882z"></path></svg>
-      <span>Насосы, Обслуживание</span>
-    </div>
-  </div>
-</main>
-<div id="discuss-footer">
-  <input id="answers" type="radio" name="group" checked="checked">
-  <label class="df-tab" for="answers">Список ответов</label>
-  <section id="answers">
-    <article class="a-answer">
-      <header class="a-header">
-        <div class="a-avatar"><img src="ava.jpg" alt="" width="36" height="36"></div>
-        <div class="a-author">Евгений Тигарев</div>
-        <div class="a-date">22 часа назад</div>
-      </header>
-      <div class="a-body">
-        <p>Вот что я думаю по поводу данного вопроса - Все это должен выбирать грамотный, обученный специалист широкого профиля. Поскольку сейчас налетят все кому не лень и начнут впариваться свои насосы! Верьте только мне, все остальные не правы!</p>
-      </div>
-      <div class="a-footer">
-        <div class="a-rating">
-          <div class="angle">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" ><path fill="currentColor" d="M168.5 164.2l148 146.8c4.7 4.7 4.7 12.3 0 17l-19.8 19.8c-4.7 4.7-12.3 4.7-17 0L160 229.3 40.3 347.8c-4.7 4.7-12.3 4.7-17 0L3.5 328c-4.7-4.7-4.7-12.3 0-17l148-146.8c4.7-4.7 12.3-4.7 17 0z" class=""></path></svg>
-          </div>
-          <span>3</span>
-          <div class="angle"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path fill="currentColor" d="M151.5 347.8L3.5 201c-4.7-4.7-4.7-12.3 0-17l19.8-19.8c4.7-4.7 12.3-4.7 17 0L160 282.7l119.7-118.5c4.7-4.7 12.3-4.7 17 0l19.8 19.8c4.7 4.7 4.7 12.3 0 17l-148 146.8c-4.7 4.7-12.3 4.7-17 0z" class=""></path></svg>
-          </div>
-        </div>
-      </div>
-    </article>
-    <article class="a-answer">
-      <header class="a-header">
-        <div class="a-avatar"><img src="ava.jpg" alt="" width="36" height="36"></div>
-        <div class="a-author">Евгений Тигарев</div>
-        <div class="a-date">22 часа назад</div>
-      </header>
-      <div class="a-body">
-        <p>Вот что я думаю по поводу данного вопроса - Все это должен выбирать грамотный, обученный специалист широкого профиля. Поскольку сейчас налетят все кому не лень и начнут впариваться свои насосы! Верьте только мне, все остальные не правы!</p>
-      </div>
-      <div class="a-footer">
-        <div class="a-rating">
-          <div class="angle">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" ><path fill="currentColor" d="M168.5 164.2l148 146.8c4.7 4.7 4.7 12.3 0 17l-19.8 19.8c-4.7 4.7-12.3 4.7-17 0L160 229.3 40.3 347.8c-4.7 4.7-12.3 4.7-17 0L3.5 328c-4.7-4.7-4.7-12.3 0-17l148-146.8c4.7-4.7 12.3-4.7 17 0z" class=""></path></svg>
-          </div>
-          <span>3</span>
-          <div class="angle"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path fill="currentColor" d="M151.5 347.8L3.5 201c-4.7-4.7-4.7-12.3 0-17l19.8-19.8c4.7-4.7 12.3-4.7 17 0L160 282.7l119.7-118.5c4.7-4.7 12.3-4.7 17 0l19.8 19.8c4.7 4.7 4.7 12.3 0 17l-148 146.8c-4.7 4.7-12.3 4.7-17 0z" class=""></path></svg>
-          </div>
-        </div>
-      </div>
-    </article>
-    <article class="a-answer">
-      <header class="a-header">
-        <div class="a-avatar"><img src="ava.jpg" alt="" width="36" height="36"></div>
-        <div class="a-author">Евгений Тигарев</div>
-        <div class="a-date">22 часа назад</div>
-      </header>
-      <div class="a-body">
-        <p>Вот что я думаю по поводу данного вопроса - Все это должен выбирать грамотный, обученный специалист широкого профиля. Поскольку сейчас налетят все кому не лень и начнут впариваться свои насосы! Верьте только мне, все остальные не правы!</p>
-      </div>
-      <div class="a-footer">
-        <div class="a-rating">
-          <div class="angle">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" ><path fill="currentColor" d="M168.5 164.2l148 146.8c4.7 4.7 4.7 12.3 0 17l-19.8 19.8c-4.7 4.7-12.3 4.7-17 0L160 229.3 40.3 347.8c-4.7 4.7-12.3 4.7-17 0L3.5 328c-4.7-4.7-4.7-12.3 0-17l148-146.8c4.7-4.7 12.3-4.7 17 0z" class=""></path></svg>
-          </div>
-          <span>3</span>
-          <div class="angle"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path fill="currentColor" d="M151.5 347.8L3.5 201c-4.7-4.7-4.7-12.3 0-17l19.8-19.8c4.7-4.7 12.3-4.7 17 0L160 282.7l119.7-118.5c4.7-4.7 12.3-4.7 17 0l19.8 19.8c4.7 4.7 4.7 12.3 0 17l-148 146.8c-4.7 4.7-12.3 4.7-17 0z" class=""></path></svg>
-          </div>
-        </div>
-      </div>
-    </article>
-  </section>
-  <input id="add" type="radio" name="group">
-  <label class="df-tab" for="add">Добавить ответ</label>
-  <section id="add-new-answer">omnomnom</section>
-</div>
-</body>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Частный вебмастер в Мурманске. Занимаюсь разработкой и обслуживанием сайтов, поисковой оптимизацией и интернет-маркетингом">
+    <title>Частный вебмастер Тигарев Евгений</title>
+  </head>
+  <body>
+    <h1>Технические работы на сайте</h1>
+    <p>Связаться со мной можно по номеру <a href="tel:+79211692439">+79211692439</a> или вконтакте <a href="https://vk.com/tigareves" target="_blank">vk.com/tigareves</a></p>
+  </body>
 </html>
