--- a/s51/index.html
+++ b/s51/index.html
@@ -35,15 +35,18 @@
     .ad-link {display: block; border-radius: 4px; border: 1px solid #949494; text-decoration: none; font-size: .8rem; padding: 0 14px; color: inherit; background-color: #fff;}
 
     #discuss-body {}
-    .db-header {font-size: .9rem; display: flex; color: #949494; margin: 20px 0;}
-    .db-author > span{ color: #535353; }
-    .db-date {margin-left: auto;}
+    .db-header {color: #949494; margin: 20px 0; position: relative;}
+    .db-author {margin-left: 55px; line-height: 1;}
+    .db-author > span{ color: #535353;}
+    .db-date {margin-left: 55px; font-size: .9rem;}
+    .db-avatar {position: absolute; top: -7px;}
+    .db-avatar>img{border-radius: 50%;}
 
     .db-content {padding: 0 20px;}
     .db-title {margin-top: 10px;}
     .db-title > h1 {font-size: 1.5rem; font-family: 'Yanone Kaffeesatz', sans-serif; font-weight: normal; line-height: .95;}
     .db-description {margin-top: 10px; border-left: 3px solid #202D40; padding-left: .5rem;}
-    .db-description p {line-height: 1.4; font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; font-style: italic; color: #535353; font-size: .9rem;}
+    .db-description p {line-height: 1.4; font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; color: #535353; font-size: .9rem;}
 
     .db-footer {margin: 20px 0; font-size: .9rem; color: #949494; }
     .db-tags > svg {height: 1em; margin-right: 5px;}
@@ -106,13 +109,16 @@
 <!-- add-discuss -->
 <div id="add-dicuss" class="container">
   <div class="ad-close"><svg aria-hidden="true" data-prefix="far" data-icon="times" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512" class="svg-inline--fa fa-times fa-w-12"><path fill="currentColor" d="M231.6 256l130.1-130.1c4.7-4.7 4.7-12.3 0-17l-22.6-22.6c-4.7-4.7-12.3-4.7-17 0L192 216.4 61.9 86.3c-4.7-4.7-12.3-4.7-17 0l-22.6 22.6c-4.7 4.7-4.7 12.3 0 17L152.4 256 22.3 386.1c-4.7 4.7-4.7 12.3 0 17l22.6 22.6c4.7 4.7 12.3 4.7 17 0L192 295.6l130.1 130.1c4.7 4.7 12.3 4.7 17 0l22.6-22.6c4.7-4.7 4.7-12.3 0-17L231.6 256z" class=""></path></svg></div>
-  <div class="ad-text"><span>Не нашли интересующей Вас темы? Просто создайт свою.</span></div>
+  <div class="ad-text"><span>Не нашли интересующей Вас темы? Просто создайте свою.</span></div>
   <div class="ad-button">
     <a class="ad-link" href="">Создать</a>
   </div>
 </div>
 <main id="discuss-body" class="inner">
   <div class="db-header">
+    <div class="db-avatar">
+      <img src="ava.jpg" alt="" width="48" height="48">
+    </div>
     <div class="db-author">
       <span>Тигарев Евгений</span> спрашивает
     </div>
