--- a/maxima51.ru/index.html
+++ b/maxima51.ru/index.html
@@ -53,11 +53,11 @@
   <!-- main -->
   <main id="main" class="container">
     <!-- breadcrumb -->
-    <ol id="breadcrumb">
+<!--     <ol id="breadcrumb">
       <li class="breadcrumb-item"><a class="breadcrumb-link" href="http://maxima51.ru/">Главная</a></li>
       <li class="breadcrumb-item"><a class="breadcrumb-link" href="http://maxima51.ru/uslugi/">Услуги</a></li>
       <li class="breadcrumb-item"><a class="breadcrumb-link is-active" href="#">Аренда</a></li>
-    </ol>
+    </ol> -->
     <!-- about office building -->
     <section id="content-about">
       <!-- thumbnail image -->
@@ -75,25 +75,24 @@
       </a>
       <!-- about office buildng -->
       <div class="ca-description">
-        <div class="ca-headline">Аренда офисов в Деловом Центре — «Арктический»</div>
-        <div class="ca-company">Морская Компания «Максима»  — современная компания, гибкая и оперативная в принятии решений. Мы оказываем комплекс услуг по аренде</div>
+        <div class="ca-headline">Аренда офисов в Деловом «Арктическом Центре».</div>
+        <div class="ca-company">«Арктический центр» - бизнес-центр класса А+, расположенный в центре Мурманска.
+( <a class="ca-adress" rel="nofollow" href="https://yandex.ru/maps/-/CBqEm4epPD">открыть карту</a> ). Площадь офисных помещений от 20 до 100 м2</div>
         <div class="ca-body">
-          <p>ДЦ «Арктический» - Здесь нужно написать небольшой текст, который бы рассказал что это вообще за деловой центр. Какие-то важные для людей нюансы, связанные со спецификой самого центра.</p>
-          <p>Удобное расположение здания в центре Мурманска делает его замечательным выбором. Большое количество крупных компаний уже выбрали этот деловой центр, теперь и Ваша очередь:)</p>
+          <p>Есть возможность арендовать этаж целиком. Можно выбрать офис с панорамным видом на город или расположиться в эркере со сплошным остеклением. Офисы полностью готовы к работе.</p>
         </div>
-        <div class="ca-adress">— ул. Капитана Буркова, 36 ( <a class="ca-more" rel="nofollow" href="https://yandex.ru/maps/-/CBqEm4epPD" target="_blank">на карте</a> )</div>
         <div class="ca-numbers">
           <div class="ca-numbers-column">
-            <div class="-big-number">24</div>
-            <div class="-small-text">Этажа<br>здание</div>
+            <div class="-big-text">Центр города</div>
+            <div class="-small-text">( <a class="ca-adress" href="/">карта</a> )</div>
           </div>
           <div class="ca-numbers-column">
-            <div class="-big-number">865</div>
-            <div class="-small-text">Офисов<br>для аренды</div>
+            <div class="-big-text">900 &#8381;/м2</div>
+            <div class="-small-text">средняя цена аренды</div>
           </div>
           <div class="ca-numbers-column">
-            <div class="-big-number">4,200</div>
-            <div class="-small-text">Пончиков<br>в сутки</div>
+            <div class="-big-text">Аренда этажей</div>
+            <div class="-small-text">Есть возможность арендовать весь этаж</div>
           </div>
         </div>
       </div>
@@ -207,15 +206,15 @@
       <div class="co-description">
         <div class="co-headline">Предлагаем аренду по адекватной цене!</div>
         <div class="co-value">
-          <span class="-big-number">800</span><span class="price-text">&#8381;/м<sup>2</sup></span>
+          <span class="-big-text">800 </span><span class="price-text">&#8381;/м<sup>2</sup></span>
           <span class="-small-text">Офисы с видом на ул. Буркова</span>
         </div>
         <div class="co-value">
-          <span class="-big-number">900</span><span class="price-text">&#8381;/м<sup>2</sup></span>
+          <span class="-big-text">900 </span><span class="price-text">&#8381;/м<sup>2</sup></span>
           <span class="-small-text">Офисы с видом на город</span>
         </div>
         <div class="co-value">
-          <span class="-big-number">1.000</span><span class="price-text">&#8381;/м<sup>2</sup></span>
+          <span class="-big-text">1.000 </span><span class="price-text">&#8381;/м<sup>2</sup></span>
           <span class="-small-text">Офисы - энкеры</span>
         </div>
         <div class="co-hot"><span>Каждой компании</span>, при<br><span>личном знакомстве</span>,<br>мы <span>готовы сделать</span><br><span>предожение.</span>
@@ -247,23 +246,23 @@
           <table class="co-table">
             <tr>
               <th><span class="-table-cell-caption">Номер </span>(№)</th>
-              <th><span class="-table-cell-caption">Площадь </span>(м<sup>2</sup>)</th>
               <th><span class="-table-cell-caption">Стоимость </span>(&#8381;/м<sup>2</sup>)</th>
             </tr>
             <tr>
               <td>400</td>
-              <td>32,5</td>
-              <td>ххх</td>
+              <td>1000</td>
             </tr>
             <tr>
               <td>402</td>
-              <td>47,3</td>
-              <td>ххх</td>
+              <td>800</td>
             </tr>
             <tr>
               <td>403</td>
-              <td>36,5</td>
-              <td>ххх</td>
+              <td>800</td>
+            </tr>
+            <tr>
+              <td>405</td>
+              <td>800</td>
             </tr>
           </table>
         </div>
@@ -288,48 +287,39 @@
           <table class="co-table">
             <tr>
               <th><span class="-table-cell-caption">Номер </span>(№)</th>
-              <th><span class="-table-cell-caption">Площадь </span>(м<sup>2</sup>)</th>
               <th><span class="-table-cell-caption">Стоимость </span>(&#8381;/м<sup>2</sup>)</th>
             </tr>
             <tr>
               <td>800</td>
-              <td>33,58</td>
-              <td>ххх</td>
+              <td>1000</td>
             </tr>
             <tr>
               <td>801</td>
-              <td>35,9</td>
-              <td>ххх</td>
+              <td>800</td>
             </tr>
             <tr>
               <td>801 а</td>
-              <td>35,4</td>
-              <td>ххх</td>
+              <td>800</td>
             </tr>
             <tr>
               <td>802</td>
-              <td>38,9</td>
-              <td>ххх</td>
+              <td>800</td>
             </tr>
             <tr>
               <td>804</td>
-              <td>36,7</td>
-              <td>ххх</td>
+              <td>800</td>
             </tr>
             <tr>
               <td>804 а</td>
-              <td>26,5</td>
-              <td>ххх</td>
+              <td>800</td>
             </tr>
             <tr>
               <td>804 б</td>
-              <td>11,9</td>
-              <td>ххх</td>
+              <td>1000</td>
             </tr>
             <tr>
               <td>809</td>
-              <td>20,2</td>
-              <td>ххх</td>
+              <td>1000</td>
             </tr>
           </table>
         </div>
@@ -354,33 +344,23 @@
           <table class="co-table">
             <tr>
               <th><span class="-table-cell-caption">Номер </span>(№)</th>
-              <th><span class="-table-cell-caption">Площадь </span>(м<sup>2</sup>)</th>
               <th><span class="-table-cell-caption">Стоимость </span>(&#8381;/м<sup>2</sup>)</th>
             </tr>
             <tr>
               <td>909/910</td>
-              <td>87,8</td>
-              <td>ххх</td>
+              <td>900</td>
             </tr>
             <tr>
               <td>907/908</td>
-              <td>70,9</td>
-              <td>ххх</td>
+              <td>900</td>
             </tr>
             <tr>
               <td>901/903</td>
-              <td>107,1</td>
-              <td>ххх</td>
+              <td>800</td>
             </tr>
             <tr>
               <td>906</td>
-              <td>59,1</td>
-              <td>ххх</td>
-            </tr>
-            <tr>
-              <td>900</td>
-              <td>33,8</td>
-              <td>ххх</td>
+              <td>800</td>
             </tr>
           </table>
         </div>
@@ -388,9 +368,9 @@
     </section>
     <!-- our contacts -->
     <section id="content-contacts">
-      <div class="cc-header">Подробная информация</div>
+      <div class="cc-header">Индивидуальное предложение по заявке на электронную почту:</div>
       <div class="cc-phone">+7(911) 345-66-00</div>
-      <div class="cc-description"><strong>Так же можете задавать любые вопросы на наш почтовый ящик arenda@maxima51.ru</strong></div>
+      <div class="cc-mail"><strong>arenda@maxima51.ru</strong></div>
     </section>
   </main>
   <!-- footer -->
