--- a/maxima51.ru/index.html
+++ b/maxima51.ru/index.html
@@ -84,7 +84,7 @@
         <div class="ca-numbers">
           <div class="ca-numbers-column">
             <div class="-big-text">Центр города</div>
-            <div class="-small-text">( <a class="ca-adress" href="/">карта</a> )</div>
+            <div class="-small-text">( <a class="ca-adress" rel="nofollow" href="https://yandex.ru/maps/-/CBqEm4epPD">карта</a> )</div>
           </div>
           <div class="ca-numbers-column">
             <div class="-big-text">900 &#8381;/м2</div>
