--- a/maxima51.ru/index.html
+++ b/maxima51.ru/index.html
@@ -215,7 +215,7 @@
         </div>
         <div class="co-value">
           <span class="-big-text">1.000 </span><span class="price-text">&#8381;/м<sup>2</sup></span>
-          <span class="-small-text">Офисы - энкеры</span>
+          <span class="-small-text">Офисы - эркеры</span>
         </div>
         <div class="co-hot"><span>Каждой компании</span>, при<br><span>личном знакомстве</span>,<br>мы <span>готовы сделать</span><br><span>предожение.</span>
           <p>Даже лучше,<br>чем эти!</p></div>
