--- a/maxima51.ru/index.html
+++ b/maxima51.ru/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Морская Компания «Максима» предлагает Вам аренду офисов в деловом центре Арктический.">
-  <title>Аренда офиса в центре Мурманска - Деловой центр «Арктический»</title>
+  <meta name="description" content="«Арктический центр» - бизнес-центр класса А+. Площадь офисных помещений от 20 до 100 м2. Есть возможность арендовать этаж целиком. Можно выбрать офис с панорамным видом на город или расположиться в эркере со сплошным остеклением. Офисы полностью готовы к работе.">
+  <title>Аренда офиса в центре Мурманска - «Арктический центр»</title>
   <link href="http://fonts.googleapis.com/css?family=Ubuntu:400,500,500italic&amp;subset=latin,cyrillic" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Gabriela&amp;subset=cyrillic" rel="stylesheet"> 
   <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -145,13 +145,39 @@
       <div class="cg-imagelist">
         <div class="cg-imagelist-column">
             <!-- office image -->
+            <a class="cg-imagebox" href="#photo-office-5">
+              <div class="-zoom">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                  <path fill="currentColor" d="M319.8 204v8c0 6.6-5.4 12-12 12h-84v84c0 6.6-5.4 12-12 12h-8c-6.6 0-12-5.4-12-12v-84h-84c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h84v-84c0-6.6 5.4-12 12-12h8c6.6 0 12 5.4 12 12v84h84c6.6 0 12 5.4 12 12zm188.5 293L497 508.3c-4.7 4.7-12.3 4.7-17 0l-129-129c-2.3-2.3-3.5-5.3-3.5-8.5v-8.5C310.6 395.7 261.7 416 208 416 93.8 416 1.5 324.9 0 210.7-1.5 93.7 93.7-1.5 210.7 0 324.9 1.5 416 93.8 416 208c0 53.7-20.3 102.6-53.7 139.5h8.5c3.2 0 6.2 1.3 8.5 3.5l129 129c4.7 4.7 4.7 12.3 0 17zM384 208c0-97.3-78.7-176-176-176S32 110.7 32 208s78.7 176 176 176 176-78.7 176-176z" class=""></path>
+                </svg>
+              </div>
+              <img class="-image-small" src="img/office-5.jpg">
+            </a>
+            <!-- lightbox image (hidden)-->
+            <a href="#_" class="-lightbox" id="photo-office-5">
+              <img src="img/office-5.jpg">
+            </a>
+            <!-- office image -->
+            <a class="cg-imagebox" href="#photo-office-hall">
+              <div class="-zoom">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                  <path fill="currentColor" d="M319.8 204v8c0 6.6-5.4 12-12 12h-84v84c0 6.6-5.4 12-12 12h-8c-6.6 0-12-5.4-12-12v-84h-84c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h84v-84c0-6.6 5.4-12 12-12h8c6.6 0 12 5.4 12 12v84h84c6.6 0 12 5.4 12 12zm188.5 293L497 508.3c-4.7 4.7-12.3 4.7-17 0l-129-129c-2.3-2.3-3.5-5.3-3.5-8.5v-8.5C310.6 395.7 261.7 416 208 416 93.8 416 1.5 324.9 0 210.7-1.5 93.7 93.7-1.5 210.7 0 324.9 1.5 416 93.8 416 208c0 53.7-20.3 102.6-53.7 139.5h8.5c3.2 0 6.2 1.3 8.5 3.5l129 129c4.7 4.7 4.7 12.3 0 17zM384 208c0-97.3-78.7-176-176-176S32 110.7 32 208s78.7 176 176 176 176-78.7 176-176z" class=""></path>
+                </svg>
+              </div>
+              <img class="-image-small" src="img/office-hall.jpg">
+            </a>
+            <!-- lightbox image (hidden)-->
+            <a href="#_" class="-lightbox" id="photo-office-hall">
+              <img src="img/office-hall.jpg">
+            </a>
+            <!-- office image -->
             <a class="cg-imagebox" href="#photo-office-1">
               <div class="-zoom">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                   <path fill="currentColor" d="M319.8 204v8c0 6.6-5.4 12-12 12h-84v84c0 6.6-5.4 12-12 12h-8c-6.6 0-12-5.4-12-12v-84h-84c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h84v-84c0-6.6 5.4-12 12-12h8c6.6 0 12 5.4 12 12v84h84c6.6 0 12 5.4 12 12zm188.5 293L497 508.3c-4.7 4.7-12.3 4.7-17 0l-129-129c-2.3-2.3-3.5-5.3-3.5-8.5v-8.5C310.6 395.7 261.7 416 208 416 93.8 416 1.5 324.9 0 210.7-1.5 93.7 93.7-1.5 210.7 0 324.9 1.5 416 93.8 416 208c0 53.7-20.3 102.6-53.7 139.5h8.5c3.2 0 6.2 1.3 8.5 3.5l129 129c4.7 4.7 4.7 12.3 0 17zM384 208c0-97.3-78.7-176-176-176S32 110.7 32 208s78.7 176 176 176 176-78.7 176-176z" class=""></path>
                 </svg>
               </div>
-              <img class="-image-big" src="img/office-1.jpg">
+              <img class="-image-medium" src="img/office-1.jpg">
             </a>
             <!-- lightbox image (hidden)-->
             <a href="#_" class="-lightbox" id="photo-office-1">
